[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = 'redditwarp'
version = '0.3.0'
description = "The unofficial, type-complete Reddit API library for Python"
authors = ["Pyprohly <pyprohly@gmail.com>"]
license = 'MIT'
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ['reddit', 'api', 'wrapper']

[tool.poetry.dependencies]
python = "^3.8"
requests = {version = "^2.26.0", optional = true}
urllib3 = {version = "^1.26.7", optional = true}
httpx = {version = "^0.22.0", optional = true}
aiohttp = {version = "^3.7.4", optional = true}
websocket-client = {version = "^1.2.1", optional = true}
websockets = {version = "^10.0", optional = true}

[tool.poetry.dev-dependencies]
mypy = "^0.910"
pytest = "^6.2.5"
flake8 = "^4.0.1"
