[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = 'redditwarp'
version = '0.9.0'
description = "A library for interacting with the Reddit API."
authors = ["Pyprohly <pyprohly@gmail.com>"]
readme = "README.md"
license = 'MIT'
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ['reddit', 'api', 'wrapper']

[tool.poetry.dependencies]
python = "^3.8.1"
# requests = {version = "^2.26.0", optional = true}
# urllib3 = {version = "^1.26.7", optional = true}
# httpx = {version = "^0.22.0", optional = true}
# aiohttp = {version = "^3.7.4", optional = true}
# websocket-client = {version = "^1.2.1", optional = true}
# websockets = {version = "^10.0", optional = true}

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
pytest = "^7.2.0"
ruff = "^0.0.226"


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
select = ["F"]
